--- a/index.html
+++ b/index.html
@@ -5,11 +5,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>First Assignment</title>
 </head>
 
 <body>
-
+    <section class="flexible">
+        <div class="half-width">
+            <h1><span class="orange-color">Skip</span> The Diet,</h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide Healthy and delicious food for you!</p>
+            <a class="button" target="_blank" href="https://www.google.com/">Order Food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+    <section class="flexible background">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2 class="gray">About Me</h2>
+            <p>The coal powered plant has been drawing severe criticism from the onset as it is being built on the
+                periphery
+                of
+                the largest mangrove forest in the world -- only 14 km off the Sundarbans. However, the government has
+                been
+                rebutting</p>
+            <a class="button" target="_blank" href="https://www.google.com/">Contact me</a>
+        </div>
+    </section>
+    <section class="recipie">
+        <div class="middle">
+            <h2 class="gray">My Recipies</h2>
+            <p>Google Fonts is a library of more than a thousand free and open source font families, an interactive web
+                directory for browsing the library, and APIs for using the fonts via CSS and Android. The website is
+                available in more than 135 languages.</p>
+        </div>
+        <div class="recipie-section-container">
+            <div class="recipie-section">
+                <img src="images/Project Cover.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>In classical geometry, a radius of a circle or sphere is any of the line segments from its center to
+                    its
+                    perimeter, and in more modern usage, it is also their length.</p>
+            </div>
+            <div class="recipie-section">
+                <img src="images/Project Cover.png" alt="">
+                <h2>Recipie Title</h2>
+                <p>In classical geometry, a radius of a circle or sphere is any of the line segments from its center to
+                    its
+                    perimeter, and in more modern usage, it is also their length.</p>
+            </div>
+            <div class="recipie-section">
+                <img src="images/Project Cover1.jpg" alt="">
+                <h2>Recipie Title</h2>
+                <p>In classical geometry, a radius of a circle or sphere is any of the line segments from its center to
+                    its
+                    perimeter, and in more modern usage, it is also their length.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <h1><span class="orange-color">Food</span> Network</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 
 </html>
